Outliner crash on selecting nested #56251

Closed
opened 2018-08-06 17:50:02 +02:00 by ChristopherAnderssarian · 7 comments

System Information
Windows 7 Ultimate, 64-bit, 32GB, 5960x, Nvidia Quadro FX 1800 (Primary) & GeForce 9800 GTX+ (Secondary)

Blender Version
Broken: 2.8a f7b1fec463
Worked: (n/a)

Short description of error

Blender crashes on selecting nested in outliner

Exact steps for others to reproduce the error

Nest Outliner.blend

Open .blend file

Set Interaction to Blender 27X

In outliner add new collection

Select the new selection

Press F6 to open last operator

Select nested check-box

  • crash
**System Information** Windows 7 Ultimate, 64-bit, 32GB, 5960x, Nvidia Quadro FX 1800 (Primary) & GeForce 9800 GTX+ (Secondary) **Blender Version** Broken: 2.8a f7b1fec463e Worked: (n/a) **Short description of error** Blender crashes on selecting nested in outliner **Exact steps for others to reproduce the error** [Nest Outliner.blend](https://archive.blender.org/developer/F4138622/Nest_Outliner.blend) # Open .blend file # Set Interaction to Blender 27X # In outliner add new collection # Select the new selection # Press F6 to open last operator # Select nested check-box - crash

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian

Added subscriber: @s12a

Added subscriber: @s12a

I could reproduce the crash with Blender 2.80 (sub 21), Commit date: 2018-08-06 19:55, Hash faf43ff9ad

  • Windows 10 Pro x64 (1803)
  • AMD Radeon RX580 4GB with Radeon Software 18.8.1 (driver released today)

I realized that the interaction is set in the splash screen. Without this, F6 has no effect in the outliner.

image.png

image.png

Also attached backtrace and console output from a debug build.

Nest Outliner.crash.txt

console-output.txt

I could reproduce the crash with Blender 2.80 (sub 21), Commit date: 2018-08-06 19:55, Hash faf43ff9ad8 - Windows 10 Pro x64 (1803) - AMD Radeon RX580 4GB with Radeon Software 18.8.1 (driver released today) I realized that the interaction is set in the splash screen. Without this, F6 has no effect in the outliner. ![image.png](https://archive.blender.org/developer/F4141078/image.png) ![image.png](https://archive.blender.org/developer/F4141080/image.png) Also attached backtrace and console output from a debug build. [Nest Outliner.crash.txt](https://archive.blender.org/developer/F4141085/Nest_Outliner.crash.txt) [console-output.txt](https://archive.blender.org/developer/F4141084/console-output.txt)

This issue was referenced by b74612e034

This issue was referenced by b74612e034020bd5c5e38f8f122555799872ffa2

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-08-08 10:56:35 +02:00

We need a valid tree for this option, which is not guaranteed after undo step… Fix incoming.

We need a valid tree for this option, which is not guaranteed after undo step… Fix incoming.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56251
No description provided.