Fix T56251: Outliner crash on selecting nested.

We need a valid tree here, undo step will make it invalid...